--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,12 @@ packages = [{include = "kira_client"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 langchain = "^0.0.216"
+python-dotenv = "^1.0.0"
+openai = "^0.27.8"
+lark = "^1.1.5"
+weaviate-client = "^3.21.0"
+tiktoken = "^0.4.0"
+kor = "^0.11.0"
 
 
 [build-system]
