--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ lark = "^1.1.5"
 weaviate-client = "^3.21.0"
 tiktoken = "^0.4.0"
 kor = "^0.11.0"
+spotipy = "^2.23.0"
+fastapi = "^0.99.0"
+uvicorn = "^0.22.0"
 
 
 [build-system]
