feat(kira_client): add LedStripService for visual feedback on voice trigger detection
- Import LedStripService in main.py and voice_trigger_detector_service.py
- Add LED_STRIP_ENABLED flag in ConfigService
- Create new LedStripService class with methods to control LED strip
- Update VoiceTriggerDetectorService to light up LED strip when trigger word is detected
- Add dependencies for LED strip control in pyproject.toml

This change allows the application to provide visual feedback to the user when a voice trigger is detected, improving user experience.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ uvicorn = "^0.22.0"
 requests = "^2.31.0"
 pvporcupine = "^3.0.1"
 pyaudio = "^0.2.14"
+apa102-pi = "^2.5.1"
+gpiozero = "^2.0"
 
 
 [build-system]
