feat(config_service.py): add MICROPHONE_CHANNELS to ConfigService to allow configurable microphone channels fix(led_strip_service.py): set global_brightness to 1 in APA102 instantiation to ensure full brightness refactor(voice_trigger_detector_service.py): replace hardcoded channels value with ConfigService.MICROPHONE_CHANNELS for consistency feat(pyproject.toml): add rpi-gpio and lgpio dependencies for better GPIO control on Linux and ARM64 platforms

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pvporcupine = "^3.0.1"
 pyaudio = "^0.2.14"
 apa102-pi = "^2.5.1"
 gpiozero = "^2.0"
+rpi-gpio = { version = "^0.7.1", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
+lgpio = "^0.0.0.2"
 
 
 [build-system]
