--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,macos
+
+models
+logs
