feat: implement dependency injection in kira_client
- Add new file container.py to manage dependencies using dependency_injector
- Refactor main.py to use dependency injection instead of manual instantiation
- Add dependency-injector to pyproject.toml dependencies

This change allows for better modularity, testability, and maintainability of the code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ gpiozero = "^2.0"
 rpi-gpio = { version = "^0.7.1", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
 lgpio = "^0.0.0.2"
 openai = "^1.6.1"
+dependency-injector = "^4.41.0"
 
 
 [build-system]
