--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rpi-gpio = { version = "^0.7.1", markers = "sys_platform == 'linux' and platform
 lgpio = "^0.0.0.2"
 openai = "^1.6.1"
 dependency-injector = "^4.41.0"
+jinja2 = "^3.1.2"
 
 
 [build-system]
