--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ openai = "^1.6.1"
 dependency-injector = "^4.41.0"
 jinja2 = "^3.1.2"
 httpx = "^0.26.0"
+fastapi = "^0.108.0"
+pydantic = "^2.5.3"
+uvicorn = "^0.25.0"
 
 
 [build-system]
